# obscura_app

Backend/backend-mobile/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
Backend/backend-mobile/docs/: DEPLOYMENT_COSTS.md
Backend/backend-mobile/programs/obscura-per/: Cargo.toml
Backend/backend-mobile/programs/obscura-per/src/: lib.rs
Backend/backend-mobile/tests/: obscura-per.ts
Backend/vault/: package-lock.json
Backend/vault/backend/: .dockerignore  .env.example  WHITEPAPER.md  railway.json
Backend/vault/backend/docs/: API.md
Backend/vault/backend/examples/: package.json  test-e2e.ts
Frontend/mobile-app/obscura-flutter/: IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  pubspec.yaml
Frontend/mobile-app/obscura-flutter/assets/: README.md
Frontend/mobile-app/obscura-flutter/lib/: main.dart
Frontend/mobile-app/obscura-flutter/test/: widget_test.dart
Frontend/mobile-app/obscura-react-native/: package-lock.json
Frontend/web/dashboard/: next.config.js  package.json  tailwind.config.ts
obscura-vault-main/: .dockerignore  .env  .env.example  .gitignore  simple-server.js
obscura-vault-main/.kiro/settings/: mcp.json
obscura-vault-main/.kiro/steering/: product.md  structure.md  tech.md
obscura-vault-main/backend/: .gitignore  Dockerfile  GLOSSARY.md  LICENSE  README.md  package-lock.json  package.json
obscura-vault-main/backend/docs/: ARCHITECTURE.md  SDK.md  SOLANA-INTEGRATIONS.md
obscura-vault-main/backend/examples/: integration-demo.ts
obscura-vault-main/obscura-landing/: .env  .gitignore  package-lock.json
(+94 files in other folders)
