[package]
name = "obscura-per"
version = "0.1.0"
description = "Obscura Private Ephemeral Rollups - MagicBlock PER + Light Protocol ZK Compression"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "obscura_per"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
ephemeral-rollups-sdk = "0.8"
light-sdk = "0.11"
light-hasher = "1.1"
